@@ -359,15 +359,12 @@ public class TestLRUQueryCache extends LuceneTestCase {
 
     @Override
     public boolean equals(Object obj) {
-      if (obj instanceof DummyQuery == false) {
-        return false;
-      }
-      return id == ((DummyQuery) obj).id;
+      return super.equals(obj) && id == ((DummyQuery) obj).id;
     }
 
     @Override
     public int hashCode() {
-      return id;
+      return 31 * super.hashCode() + id;
     }
 
     @Override
@@ -1171,6 +1168,33 @@ public class TestLRUQueryCache extends LuceneTestCase {
     assertEquals(1, cache.getCacheCount());
 
     searcher.getIndexReader().close();
+    dir.close();
+  }
+
+  public void testEvictEmptySegmentCache() throws IOException {
+    Directory dir = newDirectory();
+    final RandomIndexWriter w = new RandomIndexWriter(random(), dir);
+    w.addDocument(new Document());
+    final DirectoryReader reader = w.getReader();
+    final IndexSearcher searcher = newSearcher(reader);
+    final LRUQueryCache queryCache = new LRUQueryCache(2, 100000) {
+      @Override
+      protected void onDocIdSetEviction(Object readerCoreKey, int numEntries, long sumRamBytesUsed) {
+        super.onDocIdSetEviction(readerCoreKey, numEntries, sumRamBytesUsed);
+        assertTrue(numEntries > 0);
+      }
+    };
+
+    searcher.setQueryCache(queryCache);
+    searcher.setQueryCachingPolicy(QueryCachingPolicy.ALWAYS_CACHE);
+
+    Query query = new DummyQuery();
+    searcher.count(query);
+    assertEquals(Collections.singletonList(query), queryCache.cachedQueries());
+    queryCache.clearQuery(query);
+
+    reader.close(); // make sure this does not trigger eviction of segment caches with no entries
+    w.close();
     dir.close();
   }
 }
